--- a/index.html
+++ b/index.html
@@ -88,8 +88,31 @@
       </section>
       <section id="section3">
         <h1>To be released on AppStore soon...</h1>
-        <img id="footerimg" src="./img/appo.png" alt="" srcset="">
+        <div class="cont-phone">
+          <img id="footerimg" src="./img/appo.png" alt="">
+        </div>
       </section>
+      <footer>
+        <div class="footer-container">
+          <div class="ele-lift">
+            <div class="logo">
+              <img src="./logos/logo.webp" alt="">
+            </div>
+            <p>Pluto Card is a Pluto Financial Services Inc.
+              company 2022</p>
+              <div class="div-too">
+                <img
+                  src="./img/email-svgrepo-com.svg"
+                  alt=""
+                  width="20px"
+                  height="20px"
+                /><input type="email" placeholder="Your email address" /><button>
+                  Get Early Access
+                </button>
+              </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
