--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="logo">
               <img src="./logos/logo.webp" alt="">
             </div>
-            <p>Pluto Card is a Pluto Financial Services Inc.
+            <p>© Pluto Card is a Pluto Financial Services Inc.
               company 2022</p>
               <div class="div-too">
                 <img
@@ -110,6 +110,28 @@
                   Get Early Access
                 </button>
               </div>
+          </div>
+          <div class="ele-right">
+            <ul>
+              <h4>About Product</h4>
+              <il>Potch</il>
+              <il>Updates</il>
+              <il>Coreers</il>
+            </ul>
+            <ul>
+              <h4>Company</h4>
+              <il>Potch</il>
+              <il>Updates</il>
+              <il>Beta Test</il>
+            </ul>
+            <ul>
+              <h4>Support</h4>
+              <il>Potch</il>
+              <il>Updates</il>
+              <il>Coreers</il>
+              <il>Coreers</il>
+            </ul>
+
           </div>
         </div>
       </footer>
